<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/root"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context=".activities.CredentialsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/margin_left">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:text="@string/cv_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/cv_register_url"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/cv_register_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_blue" />

        <TextView
            android:id="@+id/cv_apikey_url"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/cv_devkey_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_blue" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_gotkey"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/cv_apikey"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:hint="@string/api_key" />

        <Button
            android:id="@+id/confirm"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>